tests/cli_diagnostics/check_if_condition_type_error.golden
tests/fixtures/check_if_condition_type_error.curlee:2:7: error: if condition type mismatch: expected Bool, got Int
  |
  |   if (1) {
  |       ^
